--- a/contacto.html
+++ b/contacto.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sección para hacer una reserva para la fecha que desees">
-    <meta name="keywords" content="contacto, formulario, datosUsuarios, reservas">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"> 
-    <link rel="shortcut icon" href="imagenes/icon.png">
+    <meta name="description" content="Sección para hacer una reserva para la fecha que desees"> <!--Esta sección corresponde al SEO-->
+    <meta name="keywords" content="contacto, formulario, datosUsuarios, reservas">  <!--Esta sección corresponde al SEO-->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>  <!--Link de los iconos que utilice-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">  <!--Link de bootstrap-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">  <!--Link del datepicker que utilice-->
+    <link rel="shortcut icon" href="imagenes/icon.png">  <!--Esta sección corresponde al icono en la barra de navegación-->
     <link rel="stylesheet" href="css/style.css">
+    <!--Comentarios agregados en el head por la sugerencia de mi tutor-->
     
     <title>Contacto - Plant Based Food</title>
 </head>
