--- a/reseñas.html
+++ b/reseñas.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Desde esta parte podrás dejar tu comentario, opinión, crítica, reseñas, inquietudas y todo lo que nos ayude a crecer">
-    <meta name="keywords" content="reseñas, famosos, opiniones, valoración, clientes">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="shortcut icon" href="imagenes/icon.png">
+    <meta name="description" content="Desde esta parte podrás dejar tu comentario, opinión, crítica, reseñas, inquietudas y todo lo que nos ayude a crecer"> <!--Esta sección corresponde al SEO-->
+    <meta name="keywords" content="reseñas, famosos, opiniones, valoración, clientes"> <!--Esta sección corresponde al SEO-->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>  <!--Link de los iconos que utilice-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous"> <!--Link de bootstrap-->
+    <link rel="shortcut icon" href="imagenes/icon.png"> <!--Esta sección corresponde al icono en la barra de navegación-->
     <link rel="stylesheet" href="css/style.css">
+    <!--Comentarios agregados en el head por la sugerencia de mi tutor-->
     <title>Reseñas - Plant Based Food</title>
 </head>
 <body>
