--- a/reseñas.html
+++ b/reseñas.html
@@ -134,7 +134,7 @@
                             <i class='bx bxs-star'></i>
                     </div>
 
-                    <p class="info">"Toda mi vida pense que ser "vegano" era comer ensalada. Despues de visitar Plant Based Food me doy cuenta que no, ¿Quién diría que hay tantos sabores deliciones fuera de la carne? ja"</p>
+                    <p class="info">"Toda mi vida pense que ser "vegano" era comer ensalada. Despues de visitar Plant Based Food me doy cuenta que no, ¿Quién diría que hay tantos sabores deliciosos fuera de la carne? ja"</p>
                     </div>
                 
 
