--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">  
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="imagenes/bg3.jpg" class="d-block w-100 imagen" alt="plant based">
+                <img src="imagenes/bg3.jpg" class="d-block w-100 imagen-carousel" alt="plant based">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/bg6.jpg" class="d-block w-100 imagen" alt="background">
+                <img src="imagenes/bg6.jpg" class="d-block w-100 imagen-carousel" alt="background">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/bg5.jpg" class="d-block w-100 imagen" alt="background-image2">
+                <img src="imagenes/bg5.jpg" class="d-block w-100 imagen-carousel" alt="background-image2">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/bg2.jpg" class="d-block w-100 imagen" alt="background-image3">
+                <img src="imagenes/bg2.jpg" class="d-block w-100 imagen-carousel" alt="background-image3">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/bg.jpg" class="d-block w-100 imagen" alt="background-image4">
+                <img src="imagenes/bg.jpg" class="d-block w-100 imagen-carousel" alt="background-image4">
             </div>
             
         </div>
@@ -123,7 +123,7 @@
         <div class="hover">
             <img class="hover__image" src="imagenes/image4.jpg" alt="Empanadas">
         </div>
-        <p class="hero__description">Empana de carbón activado. Ingredientes: Hongos, harissa, olivas disecadas, nachos, palta, cheddar de calabza, salsa verde, pico de gallo, crema de lima, cilantro.</p>
+        <p class="hero__description">Empana de carbón activado. Ingredientes: Hongos, harissa, olivas disecadas, nachos, palta, cheddar de calabaza, salsa verde, pico de gallo, crema de lima, cilantro.</p>
     </div>    
 </main>
     
