--- a/nosotros.html
+++ b/nosotros.html
@@ -99,7 +99,7 @@
                     <img class="imagenes__cocineros" src="imagenes/cocineros1.jpg" alt="Cocineros">
                 </div>
                 <div class="col-lg-6 col-12 grid-c2">
-                <p class="description__us">Plant Based Food es un restaurante de comida a base de plantas y hongos. Somos un equipo de profesionales en la gastronomía que hace dos años iniciamos este emprendimiento y con esfuerzo se crece todos los días. La idea surgió cuando comenzamos a experimentar comida no tradicional que superaba en gusto y sabores, en el cual no había necesidad del sufrimiento animal.</p>
+                <p class="description__us">Plant Based Food es un restaurante de comida a base de plantas y hongos. Somos un equipo de profesionales en la gastronomía que hace dos años iniciamos este emprendimiento y con esfuerzo se crece todos los días. La idea surgió cuando comenzamos a experimentar comida no tradicional que superaba en gusto y sabores, en la cual no había necesidad del sufrimiento animal.</p>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
                     <img class="imagenes__cocineros" src="imagenes/cocineros2.jpg" alt="Cocineros">
                 </div>
                 <div class="col-lg-6 col-12 grid-c3">
-                <p class="description__us">Empezando siendo solo dos cocineros en busca de un nuevo horizonte, ahora contamos con mas de 10 sucursales distribuidas en todo Capital Federal y GBA. Contamos con mas de 200 profesionales apasionados en lo que hacen y seguimos creciendo. Todos nosotros compartimos una pasión y una visión del futuro.</p>
+                <p class="description__us">Comenzando siendo solo dos cocineros en busca de un nuevo horizonte, ahora contamos con mas de 10 sucursales distribuidas en todo Capital Federal y GBA. Contamos con mas de 200 profesionales apasionados en lo que hacen y seguimos creciendo. Todos nosotros compartimos una pasión y una visión del futuro.</p>
                 </div>
                 
             </div>
