--- a/reseñas.html
+++ b/reseñas.html
@@ -53,19 +53,19 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">  
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="imagenes/bg3.jpg" class="d-block w-100 imagen" alt="...">
+                <img src="imagenes/bg3.jpg" class="d-block w-100 imagen-carousel" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/bg6.jpg" class="d-block w-100 imagen" alt="...">
+                <img src="imagenes/bg6.jpg" class="d-block w-100 imagen-carousel" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/bg5.jpg" class="d-block w-100 imagen" alt="...">
+                <img src="imagenes/bg5.jpg" class="d-block w-100 imagen-carousel" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/bg2.jpg" class="d-block w-100 imagen" alt="...">
+                <img src="imagenes/bg2.jpg" class="d-block w-100 imagen-carousel" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/bg.jpg" class="d-block w-100 imagen" alt="...">
+                <img src="imagenes/bg.jpg" class="d-block w-100 imagen-carousel" alt="...">
             </div>
             
         </div>
