--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="hover">
         <img class="hover__image" src="imagenes/image1.jpg" alt="Ensalada">
     </div>
-        <p class="hero__description">Ensalada de verduras con garbanzos vegana que cuenta con muchas vitaminas, fibra y proteínas. Ingredientes: Garbanzos, cebolla, zanahoria, tomate cherry, lechuga, sal, vinagre y otros condimentos </p>
+        <p class="hero__description">Ensalada de verduras con garbanzos vegana que cuenta con muchas vitaminas, fibras y proteínas. Ingredientes: Garbanzos, cebolla, zanahoria, tomate cherry, lechuga, sal, vinagre y otros condimentos </p>
     </div>
 
 
