--- a/nosotros.html
+++ b/nosotros.html
@@ -108,7 +108,7 @@
                     <img class="imagenes__cocineros" src="imagenes/cocineros2.jpg" alt="Cocineros">
                 </div>
                 <div class="col-lg-6 col-12 grid-c3">
-                <p class="description__us">Comenzando siendo solo dos cocineros en busca de un nuevo horizonte, ahora contamos con mas de 10 sucursales distribuidas en todo Capital Federal y GBA. Contamos con mas de 200 profesionales apasionados en lo que hacen y seguimos creciendo. Todos nosotros compartimos una pasión y una visión del futuro.</p>
+                <p class="description__us">Comenzamos siendo solo dos cocineros en busca de un nuevo horizonte, ahora contamos con más de 10 sucursales distribuidas en todo Capital Federal y GBA. Contamos con más de 200 profesionales apasionados en lo que hacen y seguimos creciendo. Todos nosotros compartimos una pasión y una visión del futuro.</p>
                 </div>
             </div>
 
